# nautilus-tartex

./: .gitignore  CHANGELOG.md  LICENSE.txt  README.md  meson.build  meson_options.txt  ruff.toml  version
resources/: resources.gresource.xml
src/: nautilus-tartex.ui  nautilus_tartex.py  resources.gresource.xml
ui/: nautilus-tartex-busy-spinner.ui  nautilus-tartex-complete.ui  nautilus-tartex-progress.ui  nautilus-tartex-success-dlg.ui
